add update metric v1 docs
